# junk

./: 00-concurrent_download.py  01-get_pages.py  03-get_pages_batched_greenlets.py  04-naive-benchmarks.py  Canonical-ChromeOS-ProjectOrgChart.py  README  README.rst  concurrent_download.py  example-fixed-vert-only-simple.html  example-fixed-vert-only.html  example-fixed.html  example-vert-only.html  example.html  getMaillistParticipation.py  get_pages.py  get_pages_greenlets.py  runUpdate.sh  scan-for-mt-devices.output-patch  scan-for-mt-devices.py  scan-for-mt-devices.sh  updateDropped.py
examples/: accordion_example_1.html  accordion_example_1_broken_content_height.html  accordion_example_1_broken_expand.html  accordion_example_1_custom.html  accordion_example_1_formatted.html
intro/: Makefile  example.py  mything.c  mything.h  mythingmodule.c  setup.py  useful_links.txt
lpapi/: api.py
messaging/amqp/twisted/: common.py  consumer.py  notes.txt  producer.py
nevow/objectpublishing/django/: regex.tac
nevow/objectpublishing/introduction/: simple.tac  simple2.tac
openerp/: Makefile
openerp/etc/: openerp-sample.yml  openerp.yml
openerp/pyopenerp/: const.py  exceptions.py  util.py
qt/: build.sh
qt/python/: CMakeLists.txt
qt/python/mything/: CMakeLists.txt  global.h  typesystem_mything.xml
qt/src/: mything.c  mything.h  mything.pro
wiki/: Makefile  README  updateProjectsStates.py
wiki/etc/: config.ini
wiki/oempmwiki/: __init__.py  config.py  const.py  deps.py  google.py  scripts.py  table.py  unicodecsv.py  util.py  writer.py
(+54 files in other folders)
